--- a/projeto-travessia/angular.json
+++ b/projeto-travessia/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss","node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
