--- a/projeto-travessia-frontend/package.json
+++ b/projeto-travessia-frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "^16.2.0",
     "@angular/cdk": "^16.2.8",
-    "@angular/common": "^16.2.0",
+    "@angular/common": "^16.2.11",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/fire": "^16.0.0",
@@ -24,6 +24,7 @@
     "@types/firebase": "^3.2.1",
     "firebase": "^10.5.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
